# genie

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  skill.md
docs/: architecture.md  integrations.md  licensing.md  safety.md
examples/: basic_usage.py
genie/: __init__.py  api.py  cli.py  config.py  fusion.py  pipeline.py  quality.py  schemas.py  summarizer.py
genie/adapters/: __init__.py  acoustic_adapter.py  brain_language_adapter.py  deepface_adapter.py  pyannote_adapter.py  pyfeat_adapter.py  speech_emotion_adapter.py  tribe_adapter.py
genie/preprocess/: __init__.py  audio.py  frames.py  video.py
genie/utils/: __init__.py  logging.py
genie/visuals/: __init__.py  bars.py  frame_overlay.py  timeline.py
